# markdown-storage

./: .gitignore  Cargo.toml  README.md  store.db
assets/: test.md
src/: db.rs  lib.rs  main.rs  routes.rs  types.rs
src/graphql/: entities.rs  enums.rs  mod.rs  objects.rs  scalars.rs  schema.rs
web/: package-lock.json  package.json
