[package]
name = "markdown-storage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "0.3.0"
markdown-parser = "0.1.2"
yaml-rust = "0.4.5"
actix-web = "3"
actix-files = "0.5.0"
rust-embed="5.9.0"
mime-db = "1.4.0"