[package]
name = "markdown-storage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "0.3.0"
markdown-parser = "0.1.2"
yaml-rust = "0.4.5"
jsonrpc-http-server = "18.0.0"
rusqlite = "0.25.3"