[package]
name = "markdown-storage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "0.3.0"
markdown-parser = "0.1.2"
yaml-rust = "0.4.5"
jsonrpc-http-server = "18.0.0"
jammdb = "0.5.0"
serde = "1.0.127"
rmp-serde = "0.15.5"
md5 = "0.7.0"
chrono = "0.4.19"
juniper = { git = "https://github.com/graphql-rust/juniper" }